Add mover and bookings documentation
